--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             I have a knack for envisioning products from the consumer’s point of view and I have a passion for building well-architected, 
             scalable products with professional engineering teams. My superpower is adaptability, especially with technology tools.
         </h2>
-        <a href="#" class="button">Check out my skills</a>
+        <a href="about.html" class="button">Check out my skills</a>
         <a href="#" class="button">Get in touch</a>
 		</div>
 		<script src="js/tota11y.min.js"></script>
@@ -47,10 +47,10 @@
 		<p>Find me on</p>
 			<div class=social__media>
 				<!-- Github logo -->
-			<a href="https://www.github.com/SoniaRMK" target="_blank"><i class="fab fa-github" style="font-size:40px;color:#fff;margin-right: 15px;"></i></a>
-			<!-- LinkedIn logo -->
-			<a href="https://www.linkedin.com/in/soniarmkarungi/" target="_blank"><i class="fab fa-linkedin-in" style="font-size:40px;color:#fff"></i></a>
-		</div>
+				<a href="https://www.github.com/SoniaRMK" target="_blank"><i class="fab fa-github" style="font-size:40px;color:#fff;margin-right: 15px;"></i></a>
+				<!-- LinkedIn logo -->
+				<a href="https://www.linkedin.com/in/soniarmkarungi/" target="_blank"><i class="fab fa-linkedin-in" style="font-size:40px;color:#fff"></i></a>
+			</div>
 		</footer>
 	</body>
 	</html>
